# xcoin

./: CMakeLists.txt  LICENSE.md  README.md
src/: defines.hpp  main.cpp
src/args/: args.hpp  ioption.hpp  mining.hpp  program.hpp  tools.hpp  wallet.hpp
src/cli/: cli.hpp  mining.hpp  wallet.hpp
src/consensus/: block.hpp  consensus.hpp
src/core/: block.hpp  chain.hpp  coin.hpp  core.hpp  input.hpp  mempool.hpp  output.hpp  transaction.hpp  utxo.hpp
src/crypto/: base.hpp  bytes.hpp  crypto.hpp  ecdsa.hpp  merkletree.hpp  ripemd.hpp  sha.hpp
src/network/: client.hpp  miner.hpp  network.hpp  node.hpp  server.hpp
src/tools/: clock.hpp  tools.hpp
test/crypto/: base.cpp  bytes.cpp  ecdsa.cpp  merkletree.cpp  ripemd.cpp  sha.cpp
